src/app/app.component.scss
section {
  height: 100vh;
  background-color: #1b1e27;
}

.carousel {
  width: 100%;
  height: 100%;
  padding: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  z-index: 1;
}

.carousel-container {
  max-width: 1200px;
  width: 100%;
  height: 100%;
  position: relative;
}

.btn-row {
  display: flex;
  justify-content: space-between;
  width: 100%;

  button {
    cursor: pointer;
    background: transparent;
    border: none;

    span {
      font-size: 50px;
      color: white;
    }
  }
}

.card {
  position: absolute;
  width: 100%;
  height: 100%;
  padding: 20px;
  box-sizing: border-box;
  border-radius: 20px;
  background-size: cover;
  display: flex;
  align-items: center;
  z-index: 1;
}

.left-card {
  position: absolute;
  width: 80%;
  height: 80%;
  border-radius: 20px;
  background-size: cover;
  top: 10%;
  left: -10%;
}

.right-card {
  position: absolute;
  width: 80%;
  height: 80%;
  border-radius: 20px;
  background-size: cover;
  top: 10%;
  right: -10%;
}

.forward-animation {
  .card {
    position: absolute;
    animation: main-to-right 1s ease-in-out forwards;
  }

  .left-card {
    animation: left-to-main 1s ease-in-out forwards;
    z-index: 1;
  }

  .right-card {
    animation: right-to-left 1s ease-in-out forwards;
  }

}

.backwards-animation {
  .card {
    position: absolute;
    animation: main-to-left 1s ease-in-out forwards;
  }

  .left-card {
    animation: left-to-right 1s ease-in-out forwards;
  }

  .right-card {
    animation: right-to-main 1s ease-in-out forwards;
    z-index: 1;
  }

}

/*
  Forward - Animations
 */

@keyframes left-to-main {
  0% {
    width: 80%;
    height: 80%;
    top: 10%;
    left: -10%;
  }
  100% {
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
  }
}

@keyframes main-to-right {
  0% {
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
  }
  100% {
    width: 80%;
    height: 80%;
    top: 10%;
    right: -10%;
  }

}

@keyframes right-to-left {
  0% {
    width: 80%;
    height: 80%;
    top: 10%;
    right: -10%;
  }
  100% {
    right: 10%;
  }

}

/*
  Backwards - Animations
 */

@keyframes right-to-main {
  0% {
    width: 80%;
    height: 80%;
    top: 10%;
    right: -10%;
  }
  100% {
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
  }
}

@keyframes main-to-left {
  0% {
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
  }
  100% {
    width: 80%;
    height: 80%;
    top: 10%;
    left: -10%;
  }

}

@keyframes left-to-right {
  0% {
    width: 80%;
    height: 80%;
    top: 10%;
    left: -10%;
  }
  100% {
    left: 10%;
  }

}

